# pdfconverse

./: .gitignore  README.md  pyproject.toml
smartpdf/: LICENSE.txt  README.md  pyproject.toml
smartpdf/src/smartpdf/: gemini.py  mock_model.py  validators.py
smartpdf/src/smartpdf/interfaces/: model.py
smartpdf/src/smartpdf/models/: __init__.py
smartpdf/tests/: mock_model_test.py  smartpdf_test.py  validators_test.py
src/pdfconverse/: __about__.py  __init__.py  models.py  page.py  pdfconverse.py  validators.py
src/pdfconverse/formats/: gemini_expected_output.py
src/smartpdf/: __about__.py  page.py  prompts.py  smartpdf.py
tests/: gemini_test.py  mock_model_test.py  page_test.py  pdfconverse_test.py  pypdf_test.py  validators_test.py
